functional v1 description for cardio

--- a/requirements_training.txt
+++ b/requirements_training.txt
@@ -1,13 +1,13 @@
-transformers[torch]=4.40.0
+transformers[torch]==4.40.0
 pynvml
 setproctitle
-datasets=2.19.0
-accelerate=0.29.3
-bitsandbytes=0.43.1
+datasets==2.19.0
+accelerate==0.29.3
+bitsandbytes==0.43.1
 wandb
-peft=0.10.0
+peft==0.10.0
 pydantic
-galore-torch=1.0
-scikit-learn=1.4.2
-evaluate=0.4.1
+galore-torch==1.0
+scikit-learn==1.4.2
+evaluate==0.4.1
 seqeval
