Huge rework to how prompts are managed and created

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,18 @@ requests==2.31.0
 beautifulsoup4==4.12.3
 colorama==0.4.6
 markdownify==0.11.6
-tiktoken
-openpyxl
-plotly
+openpyxl==3.1.3
+plotly==5.22.0
 tokenizers==0.19.1
 transformers[torch]==4.40.0
-pynvml
-setproctitle
+pynvml==11.5.0
+setproctitle==1.3.3
 datasets==2.19.0
 accelerate==0.29.3
 bitsandbytes==0.43.1
 wandb==0.16.6
 peft==0.10.0
-pydantic
+pydantic==2.7.3
 galore-torch==1.0
 scikit-learn==1.4.2
 evaluate==0.4.1
@@ -27,4 +26,3 @@ safetensors==0.4.3
 openai==1.25.2
 rouge_score==0.1.2
 nltk==3.8.1
-chromadb==0.5.0
